--- a/article/Article.tex
+++ b/article/Article.tex
@@ -270,6 +270,13 @@ different sizes and shapes were needed.
 
 \section{ITK implementation}
 
+The filters discusses in this article are contained in 3 packages --
+{\em consolidatedMorphology}, {\em fastRankMean} and {\em
+boxConvolution}. The most recent versions of these packages can be
+obtained from {\bf link to Gaetan's darcs repo}.
+
+
+
 \appendix
 
 
