--- a/article/Article.tex
+++ b/article/Article.tex
@@ -371,6 +371,10 @@ Size  &  Direct &  Box \\
 
 \section{Comments and Conclusions}
 
+\section{Acknowledgments}
+We thank Dr Pierre Adenot and MIMA2 confocal facilities
+(\url{http://mima2.jouy.inra.fr}) for providing the 3D test image.
+
 
 
 \appendix
