make BoxAccumulateFunction take a functor argument
darcs-hash:20070627144902-2fc9d-5566cea487aa8d00bec8c879b4f7bf0599affaea.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -253,7 +253,7 @@ where $b_{i,j}$ is the accumulator value at location $i,j$ and $a_{i,j}$ is the 
 
 \begin{equation}
 \label{eq:accumMean}
-m_{i,j} = \frac{1}{wh} (b_{i+w/2,j+h/2} + b_{i-w/2,j-h/2} - b_{i-w/2,j+h/2} + b_{i+w/2,j-h/2})
+m_{i,j} = \frac{1}{w.h} (b_{i+w/2,j+h/2} + b_{i-w/2,j-h/2} - b_{i-w/2,j+h/2} + b_{i+w/2,j-h/2})
 \end{equation}
 where $m_{i,j}$ is the output of the mean filter at location $i,j$.
 
